# Arelle

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  1  CONTRIBUTING.md  COPYRIGHT.md  CntlrCmdLine.py  Dockerfile  EFM-only-test.ini  INSTALL.txt  INSTALLATION.md  LICENSE.md  License.txt  MANIFEST.in  QuickBooks.qwc  README-Xerces-Issues.txt  README.md  README.txt  ViewFile.py  ViewFileRelationshipSet.py  app.yaml  arelle.pyw  arelleCmdLine.py  arelleGUI.pyw  arelleTestEngine.py  arelle_test.py  backends.yaml  build27Dist.bat  build27Dist.sh  buildLinuxDist.sh  buildMacDist.sh  buildMacDist39.sh  buildRedhatDist.sh  buildRenameX64.bat  buildRenameX86.bat  (+49 more)
.claude/: settings.json
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  change.yml  config.yml
.github/workflows/: build-and-release-linux.yml  build-and-release-mac.yml  build-and-release-windows.yml  build-documentation.yml  build-linux.yml  build-mac.yml  build-macos.yml  build-tktable.yml  build-windows.yml  conformance-suite.yml  conformance-suites.yml  integration-tests.yml  project.yml  publish-docker.yml  publish-documentation.yml  publish-frozen-build.yml  publish-winget.yml  python-package.yml  release-drafter.yml  release.yml  test-inputs.yml  test-scripts-parallel.yml  test-scripts.yml  test-ui.yml  tests.yml  unit-tests.yml
Arelle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
apidocs/: Makefile  arelle.rst  conf.py  index.rst  make.bat  modules.rst
arelle/: ArelleBaseOptions.py  Aspect.py  BetaFeatures.py  Cntlr.py  CntlrCmdLine.py  CntlrComServer.py  CntlrGenVersReports.py  CntlrProfiler.py  CntlrQuickBooks.py  CntlrTest.py  CntlrWebMain.py  CntlrWinMain.py  CntlrWinTooltip.py  CompareInstance.py  Copy of ViewWinFormulas.py  DialogAbout.py  DialogAddonManager.py  DialogArcroleGroup.py  DialogFind.py  DialogFormulaParameters.py  DialogLanguage.py  DialogNewFactItem.py  DialogOpenArchive.py  DialogOpenTaxonomyPackage.py  DialogPackageManager.py  DialogPluginManager.py  DialogRssWatch.py  DialogURL.py  DialogUserPassword.py  DisclosureSystem.py  ErrorManager.py  FactIndex.py  FileSource.py  Formula.py  FormulaConsisAsser.py  FormulaEvaluator.py  FunctionCustom.py  FunctionFn.py  FunctionIxt.py  FunctionUtil.py  (+131 more)
arelle/api/: Session.py  SessionPool.py
arelle/archive/: CustomLogger.py  LoadSavePreLbCsv.py  LoadValidate.py  LoadValidateCmdLine.java  LoadValidatePostedZip.java  SaveTableToExelle.py  us-gaap-dei-ratio-cash-frm.xml
arelle/config/: arelle_test.ini  creationSoftwareNames.json  disclosuresystems.xml  disclosuresystems.xsd  edbody.dtd  edgartaxonomies-2013-EX2.01.xml  edgartaxonomies-2015.xml  edgartaxonomies-2016.xml  edgartaxonomies-all-years.xml  edgartaxonomies.xml  empty-instance.xml  empty-schema.dtd  empty-schema.xsd  erxl.xsd  hmrc-taxonomies.xml  ifrs-taxonomies.xml  mappings.xml  mappings.xsd  sbr-nl-taxonomies.xml  sbr-nl-taxonomies.xml.piror  sbr-text-formatting.xsd  test_conformance.ini  utr.xml  utr.xsd  xbrlschemafiles.xml  xhtml1-strict-ix.dtd  xhtml1_1-strict-ix.dtd
arelle/conformance/: CSVTestcaseLoader.py  Constants.py
arelle/doc/: messagesCatalog.xml  messagesCatalog.xsd
arelle/examples/: .project  CustomLogger.py  LoadEFMvalidate.py  LoadSavePreLbCsv.py  LoadValidate.cs  LoadValidate.java  LoadValidate.py  LoadValidateCmdLine.java  LoadValidatePostedZip.java  LoadValidateWebService.java  SaveTableToExelle.py  TR3toTR4.py  restApiTest.py  us-gaap-dei-docType-extraction-frm.xml
arelle/formula/: FactAspectsCache.py  FormulaConsisAsser.py  FormulaEvaluator.py  ValidateFormula.py  XPathContext.py  XPathParser.py
arelle/gui/: CntlrQuickBooks.py  CntlrWinMain.py  DialogArcroleGroup.py  DialogFind.py  DialogFormulaParameters.py  DialogLanguage.py  DialogNewFactItem.py  DialogOpenArchive.py  DialogPluginManager.py  DialogRssWatch.py  DialogURL.py  DialogUserPassword.py  ViewWinConcepts.py  ViewWinDTS.py  ViewWinDiffs.py  ViewWinFactGrid.py  ViewWinFactList.py  ViewWinFactTable.py  ViewWinFormulae.py  ViewWinGrid.py  ViewWinList.py  ViewWinProperties.py  ViewWinRelationshipSet.py  ViewWinRenderedGrid.py  ViewWinRssFeed.py  ViewWinTests.py  (+5 more)
arelle_cython/: arelle.arelle_c.cpp  arelle.arelle_c.pyx  arelle.lxbrl.cpp
attic/: CntlrGenVersReports.py
docker/: Dockerfile  README.md  build.sh  docker-compose.edgar.yml  docker-compose.slim.yml  docker-compose.viewer.yml  docker-compose.yml  entrypoint.sh  redhat.Dockerfile  start  ubuntu.Dockerfile
docs/: conf.py  index.md  index.rst
plugins/: README.txt  __init__.py  google_measurement.py  qnames_with_labels.py  tracker.py
scripts/: buildLinuxDist.sh  buildMacDist.sh  buildWinDist.bat  charlieTest.bat  exportCsvFormulae.bat  exportCsvFromXbrlInstance.bat  generateTestcase.py  reportAllTests.bat  runAllTests.bat  runCalc11Tests.sh  runEFMTests-27.bat  runEFMTests.bat  runEFMtests.sh  runESEFtests.bat  runESEFtests.sh  runESMAtests.sh  runFormulaTests-27.bat  runFormulaTests.bat  runFormulaTests.sh  runFunctionTests-27.bat  runFunctionTests.bat  runGUI.bat  runGUI.sh  runGenerateVersioningTestcases.bat  runGeneratedTestcase.bat  runIx11Tests.sh  runLocaleGettext.bat  runPackageTests.sh  runProfilerXDTTest.bat  runPyTest.sh  runTR2Tests.sh  runTR3Tests.sh  runTR4Tests.sh  runTR5Tests.sh  runTRSECTests.sh  runUS-GFMTests.bat  runUTRTests-27.bat  runUTRTests.bat  runUTRTests.sh  runVersioningConsumptionTests.bat  (+8 more)
test_engine/: ActualError.py  TestEngine.py  TestEngineOptions.py  TestcaseCompareContext.py  TestcaseConstraint.py  TestcaseConstraintResult.py  TestcaseConstraintSet.py  TestcaseResult.py  TestcaseVariation.py
test_suite/: ActualError.py  ExpectedErrorConstraint.py  ExpectedErrorSet.py  TestSuite.py  TestSuiteOptions.py  TestcaseConstraint.py  TestcaseConstraintResult.py  TestcaseConstraintSet.py  TestcaseResult.py  TestcaseVariation.py
tests/: case.py.patch  conformance_test.py  loader.py.patch
(+9023 files in other folders)
